--- a/src/style.scss
+++ b/src/style.scss
@@ -7,37 +7,124 @@ $sectionHeading: 18px;
 // Mixins
 @mixin banner {
 
-    img{
+    img {
         filter: brightness(50%);
         width: 100%;
     }
-    .banner-content{
+
+    .banner-content {
         position: absolute;
-        top: 150px;
+        bottom: 5px;
         left: 10px;
-        
+
     }
 
-    span{
+    a {
+        text-decoration: none;
+    }
+
+    span {
         color: $offWhite !important;
+    }
+
+    .category {
+        font-size: 12px;
     }
 }
 
+@mixin share {
+    .fa-facebook-square {
+        color: blue;
+        font-size: 30px;
+    }
+
+    .fa-instagram {
+        color: orange;
+        font-size: 30px;
+    }
+
+    .fa-youtube {
+        color: red;
+        font-size: 30px;
+    }
+
+    .fa-twitter {
+        color: skyblue;
+        font-size: 30px;
+    }
+}
+
+@mixin tag {
+    .single-tag p {
+        color: $offWhite;
+        background-color: rgba(10, 165, 212, 0.986);
+        margin: 5px;
+        padding: 4px 4px;
+        border-radius: 4px;
+        list-style-type: none;
+    }
+
+    .single-tag {
+        float: left;
+    }
+}
 
 // reset
 * {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.section1 {
-    a {
-        color: $offWhite !important;
-        font-size: $sectionHeading;
+body {
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
-        &:hover {
-            color: $deepBlue !important;
-        }
-    }
+#featured-author {
+    display: inline-block;
+    text-decoration: none;
+    color: #f8f9fb;
+
+}
+
+#featured-date {
+    display: inline-block;
+    margin-right: 2.5em;
+    margin-top: 5px;
+    color: #f8f9fb;
+}
+
+#biography-author {
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+
+}
+
+#biography-date {
+    display: inline-block;
+    margin-right: 2.5em;
+    margin-top: 5px;
+    color: black;
+}
+
+.news-title {
+    font-size: 17px;
+    line-height: 20px;
+    margin: 10px 0 0;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    color: #fff;
+}
+
+.card {
+    height: 80%;
+}
+
+p.text-justify.mx-2.para {
+    font-size: 18px;
 }
 
 // search bar
@@ -62,21 +149,126 @@ $sectionHeading: 18px;
     pointer-events: none;
 }
 
+.section1 {
+    a {
+        color: $offWhite !important;
+        font-size: $sectionHeading;
 
-.section2{
+        &:hover {
+            color: $deepBlue !important;
+        }
+    }
+}
+
+
+.section2 {
     @include banner;
 }
 
-.thumbnail{
+.thumbnail {
     overflow: hidden;
-    img{
+
+    img {
         transition: transform 0.5s ease;
-        &:hover{
+
+        &:hover {
             transform: scale(1.2);
         }
     }
 }
 
-.section3{
+.section3 {
     @include banner;
 }
+
+.section4 {
+    .latest-thumbnail {
+        overflow: hidden;
+
+
+        img {
+            transition: transform 0.5s ease-in-out;
+
+            &:hover {
+                transform: scale(0.9);
+            }
+        }
+    }
+
+    .latest-title {
+        font-size: 17px;
+        line-height: 27px;
+        margin: 10px 0 0;
+        display: -webkit-box;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        color: rgba(0, 0, 0, 0.884);
+    }
+
+    .author {
+        text-decoration: none;
+        color: rgba(0, 0, 0, 0.884);
+        line-height: 0px;
+        margin: 0;
+        padding: 0;
+
+    }
+
+    .time {
+        font-size: 12px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: white;
+        background: rgba(12, 127, 180, 0.795);
+        border-radius: 50px;
+        padding: 0.5em;
+    }
+
+    a {
+        text-decoration: none;
+    }
+}
+
+.social {
+    @include share;
+}
+
+.tags {
+    @include tag;
+}
+
+.footer {
+    padding: 15px 0 0 0;
+
+    .footer-nav {
+        a {
+            text-decoration: none;
+            color: white;
+            margin: 0 15px;
+        }
+    }
+}
+
+.biography-title {
+    text-decoration: none !important;
+    color: black;
+}
+
+.biography-slider img {
+    border-radius: 50%;
+}
+
+.biography {
+    img {
+        transition: transform 0.5s ease-in-out;
+
+        &:hover {
+            transform: scale(0.9);
+        }
+    }
+}
+
+@media (max-width: 769px) {}
